# world-cup-2026-ai-quant

./: 20260627_2eXs09DSNL.md  20260627_laYbEYxbsx.md  20260627_q3mxtUoPba.md  20260627_seed_7QTRgKM0.md  20260627_seed_7tO90cy8.md  20260627_seed_ENeYQFUa.md  20260627_seed_Qe9jAMLj.md  20260627_seed_dt3MSwD3.md  20260627_u3LJ2XSLGj.md  20260627_yskn3duRlF.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  heartbeat.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: content.yml
.github/workflows/: validate.yml
data/: sample_matches.csv  teams.csv  teams.json
docs/: evaluation-policy.md  faq.md  maintenance.md  methodology.md  recommended-websites.md  reproducibility.md
examples/: evaluate_sample.py
src/: evaluation.py
src/world_cup_2026_ai_quant/: export.py  features.py  models.py
templates/: experiment-report.md
tests/: test_export.py  test_features.py  test_models.py
